--- a/coffee-house/package.json
+++ b/coffee-house/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/dmitriyishchenko-JSFE2023Q4/coffee-house",
     "preview": "vite preview",
     "deploy": "npm run build && npx gh-pages -d dist -e coffee-house"
   },
